bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: type mismatch;
 found   : Char('a')
 required: String
var mess: String = 'a'
                   ^BDR:2: error: not found: value fini
while (fini == false) {
       ^BDR:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (mess = "R") {
           ^BDR:12: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "L") {
                ^BDR:17: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "I") {
                ^BDR:23: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "A") {
                ^BDR:27: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "B") {
                ^BDR:32: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "C") {
                ^BDR:38: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "Z") {
                ^BDR:42: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "Y") {
                ^BDR:47: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "X") {
                ^BDR:54: error: not found: value fini
    fini = true
    ^